--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     /* height: 100vh;
-    overflow: hidden; */
+    overflow: hidden; 
     margin: 0;
 }
 
@@ -14,23 +14,22 @@
     height: ;
 } */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-  
-html, body{
+
+html,
+body {
     height: 100%;
 }
 
-
-body{
+body {
     font-family: 'Montserrat', serif;
-    
 }
 
-main{
+main {
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -38,13 +37,13 @@ main{
     justify-content: center;
     align-items: center;
     background-color: black;
-    background-color : black;
+    background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
-.game-quiz-container{
+.game-quiz-container {
     width: 40rem;
     height: 30rem;
     background-color: pink;
@@ -55,7 +54,7 @@ main{
     border-radius: 30px;
 }
 
-.game-details-container{
+.game-details-container {
     width: 80%;
     height: 4rem;
     display: flex;
@@ -63,11 +62,11 @@ main{
     align-items: center;
 }
 
-.game-details-container h1{
+.game-details-container h1 {
     font-size: 1.2rem;
 }
 
-.game-question-container{
+.game-question-container {
     width: 80%;
     height: 8rem;
     display: flex;
@@ -77,13 +76,13 @@ main{
     border-radius: 25px;
 }
 
-.game-question-container h1{
+.game-question-container h1 {
     font-size: 1.1rem;
     text-align: center;
     padding: 3px;
 }
 
-.game-options-container{
+.game-options-container {
     width: 80%;
     height: 12rem;
     display: flex;
@@ -92,13 +91,14 @@ main{
     justify-content: space-around;
 }
 
-.game-options-container span{
-    width: 45%;
+.game-options-container span {
+    /* width: 45%; */
     height: 3rem;
 
 
 }
-span label{
+
+span label {
     width: 100%;
     height: 100%;
     display: flex;
@@ -110,7 +110,7 @@ span label{
     color: rgb(22, 22, 22);
 }
 
-span label:hover{
+span label:hover {
     -ms-transform: scale(1.12);
     -webkit-transform: scale(1.12);
     transform: scale(1.12);
@@ -126,17 +126,18 @@ input[type="radio"] {
 }
 
 
-input[type=radio]:checked ~ .option {
-	background: paleturquoise;
+input[type=radio]:checked~.option {
+    background: paleturquoise;
 }
 
-.next-button-container{
+.next-button-container {
     width: 50%;
     height: 3rem;
     display: flex;
     justify-content: center;
 }
-.next-button-container button{
+
+.next-button-container button {
     width: 8rem;
     height: 2rem;
     border-radius: 10px;
@@ -147,29 +148,30 @@ input[type=radio]:checked ~ .option {
     cursor: pointer;
     outline: none;
 }
-.next-button-container button:hover{
+
+.next-button-container button:hover {
     background-color: rgb(143, 93, 93);
 }
 
-.modal-container{
+.modal-container {
     display: none;
     position: fixed;
-    z-index: 1; 
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
     flex-direction: column;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     -webkit-animation: fadeIn 1.2s ease-in-out;
     animation: fadeIn 1.2s ease-in-out;
 }
 
-.modal-content-container{
+.modal-content-container {
     height: 20rem;
     width: 25rem;
     background-color: rgb(43, 42, 42);
@@ -180,14 +182,14 @@ input[type=radio]:checked ~ .option {
     border-radius: 25px;
 }
 
-.modal-content-container h1{
+.modal-content-container h1 {
     font-size: 1.3rem;
     height: 3rem;
     color: lightgray;
     text-align: center;
 }
 
-.grade-details{
+.grade-details {
     width: 15rem;
     height: 10rem;
     display: flex;
@@ -196,12 +198,12 @@ input[type=radio]:checked ~ .option {
     justify-content: space-around;
 }
 
-.grade-details p{
+.grade-details p {
     color: white;
     text-align: center;
 }
 
-.modal-button-container{
+.modal-button-container {
     height: 2rem;
     width: 100%;
     display: flex;
@@ -209,7 +211,7 @@ input[type=radio]:checked ~ .option {
     justify-content: center;
 }
 
-.modal-button-container button{
+.modal-button-container button {
     width: 10rem;
     height: 2rem;
     background: none;
@@ -220,68 +222,76 @@ input[type=radio]:checked ~ .option {
     cursor: pointer;
     border-radius: 20px;
 }
-.modal-button-container button:hover{
+
+.modal-button-container button:hover {
     background-color: rgb(83, 82, 82);
 }
 
-@media(min-width : 300px) and (max-width : 350px){
-    .game-quiz-container{
+@media(min-width : 300px) and (max-width : 350px) {
+    .game-quiz-container {
         width: 90%;
         height: 80vh;
-     }
-     .game-details-container h1{
-        font-size: 0.8rem;
-     }
- 
-     .game-question-container{
-        height: 6rem;
-     }
-     .game-question-container h1{
-       font-size: 0.9rem;
     }
- 
-    .game-options-container span{
+
+    .game-details-container h1 {
+        font-size: 0.8rem;
+    }
+
+    .game-question-container {
+        height: 6rem;
+    }
+
+    .game-question-container h1 {
+        font-size: 0.9rem;
+    }
+
+    .game-options-container span {
         width: 90%;
         height: 2.5rem;
     }
-    .game-options-container span label{
+
+    .game-options-container span label {
         font-size: 0.8rem;
     }
-    .modal-content-container{
+
+    .modal-content-container {
         width: 90%;
         height: 25rem;
     }
-    
-    .modal-content-container h1{
+
+    .modal-content-container h1 {
         font-size: 1.2rem;
     }
 }
 
-@media(min-width : 350px) and (max-width : 700px){
-   .game-quiz-container{
-       width: 90%;
-       height: 80vh;
+@media(min-width : 350px) and (max-width : 700px) {
+    .game-quiz-container {
+        width: 90%;
+        height: 80vh;
     }
-    .game-details-container h1{
+
+    .game-details-container h1 {
         font-size: 1rem;
     }
 
-    .game-question-container{
+    .game-question-container {
         height: 8rem;
     }
 
-    .game-question-container h1{
+    .game-question-container h1 {
         font-size: 0.9rem;
-     }
+    }
 
-    .game-options-container span{
+    .game-options-container span {
         width: 90%;
     }
-    .modal-content-container{
+
+    .modal-content-container {
         width: 90%;
         height: 25rem;
     }
-    .modal-content-container h1{
+
+    .modal-content-container h1 {
         font-size: 1.2rem;
     }
 }
@@ -289,11 +299,21 @@ input[type=radio]:checked ~ .option {
 
 
 @keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity:1 ;}
-  }
+    from {
+        opacity: 0;
+    }
 
-  @-webkit-keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
+    to {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
